--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@ var box = BABYLON.MeshBuilder.CreateBox("moje_kostka",{size: 3},scene);
     advanceTexture.addControl(panel)
 
     var fs_buuton = BABYLON.GUI.Button.CreateSimpleButton("button_1","fullscreen");
-    fs_buuton.width = "100px";
-    fs_buuton.height = "30px";
+    fs_buuton.width = "150px";
+    fs_buuton.height = "50px";
     fs_buuton.horizontalAlignment = BABYLON.GUI.Control.HORIZONTAL_ALIGNMENT_LEFT;
-    fs_buuton.color = "black";
+    fs_buuton.color = "green";
     panel.addControl(fs_buuton);
 
 
